Plain JS version of CFG styled and responsive, fixed text overflow issue

--- a/11_random_quote_machine/scss/style.scss
+++ b/11_random_quote_machine/scss/style.scss
@@ -1,28 +1,99 @@
+$cat-color: #3c3c3c;
+$text-color: #FFF;
+$button-color: #000;
+$ears-shape: polygon(50% 0%, 0% 100%, 100% 100%);
+$background-colors: [blue, pink, green, yellow];
+
+@mixin cat-ear($left){
+  content: '';
+  position: absolute;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  background: $cat-color;
+  width: 30%;
+  height: 50%;
+  top: -20%;
+  left: $left;
+}
 
 body {
-  color: black;
+  color: $text-color;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.2em;
+  text-align: center;
 }
-container {
-  border-radius: 15%;
+flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#quote-box {
+#cat-head {
   width: 90%;
-  height: 300px;
+  max-width: 600px;
+  height: 400px;
+  top: 120px;
   position: relative;
   margin: auto;
-  background: pink;
-  @extend container;
+  background: $cat-color;
+  border-radius: 45%;
+  @extend flex-column-center;
+  
+  #quote-box{
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    top: 24%;
+    @extend flex-column-center;
+    
+    #text {
+      height: 38%;
+      padding: 0 4%;
+      z-index: 2;
+      overflow-y: scroll;
+    }
+    #author {
+      height: 10%;
+      z-index: 2;
+      padding: 1em;
+    }
+    #buttons-box {
+      button {
+        border: none;
+        margin: 0 10px;
+        padding: 10px;
+        border-radius: 10%;
+        color: $text-color;
+        background: $button-color;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1em;
+      }
+      button:focus {
+        outline: none; 
+      }
+    } //#buttons-box
+  } //#quote-box
+} //#cat-head
+#cat-head::before {
+  @include cat-ear(4%);
 }
-#text {
-  width: 500px;
-  height: 200px;
-  color: black;
-  background: white;
+#cat-head::after {
+  @include cat-ear(66%);
 }
-#author {
-  width: 500px;
-  height: 200px;
-  color: black;
-  background: white;
+
+@media (max-width: 390px) {
+  // it's necessary to use nesting and child selectors here
+  // to override main styles above (by increasing specificity)
+  #cat-head > #quote-box > #buttons-box > button {
+    margin: 0;
+    padding: 6px;
+  }
+}
+@media (max-width: 330px) {
+  body {
+    font-size: 0.8em;
+  }
+  #cat-head {
+    height: 360px;
+  }
 }
